src/ui/snapshots/datop__ui__ui_tests__tests__connection_error_notification.snap
---
source: src/ui/ui_tests.rs
expression: output
---
datop vX.X.X-alpha - 1 containers                                                ┌─────────────────────────────────────────────────────────┐
                                                                                 │✗ user@server1: Failed to connect: Connection refused    │
ID             Name             CPU %                          Memory %          └─────────────────────────────────────────────────────────┘
abc123456789 ▶ nginx            │⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀│  25.5%  │⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀│ 431 M/954 M       1.0· KB      2.0· KB 2 hours ago
