src/ui/snapshots/datop__ui__ui_tests__tests__container_list_with_stopped_containers.snap
---
source: src/ui/ui_tests.rs
expression: output
---
datop vX.X.X-a - 4 containers                                                                         '?' help, 'q' quit
ID             Name                                            CPU %   Memory  NetTx/s      NetRx/s      Created ▼      
                                                                                                                        
abc123456789 ▶ nginx                                            25.5%   45.2%       1.0· KB      2.0· KB 2 hours ago    
def987654321 ▶ postgres                                         65.8%   78.3%       5.0· KB     10.0· KB 2 hours ago    
stop12345678 ■ old-redis                                                                                 N/A            
dead12345678 ✖ failed-app                                                                                N/A
