src/ui/snapshots/datop__ui__ui_tests__tests__search_mode_active.snap
---
source: src/ui/ui_tests.rs
expression: output
---
datop vX.X.X-a - 3 containers                                                                         '?' help, 'q' quit
                                                                                                                        
  ID             Name                                        CPU %   Memory  NetTx/s      NetRx/s      Created ▼        
                                                                                                                        
  abc123456789 ▶ nginx                                        25.5%   45.2%         1.0KB        2.0KB 2 hours ago      
  def987654321 ▶ postgres                                     65.8%   78.3%         5.0KB       10.0KB 2 hours ago      
  ghi111222333 ▶ redis                                        15.2%   30.5%          512B        1.0KB 2 hours ago      
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
/ngi
